add base html and css

--- a/index.html
+++ b/index.html
@@ -2,3 +2,11 @@
 layout: default
 title: Welcome to the home page
 ---
+
+<div class="spinner"></div>
+
+<div class="animate-bottom content">
+  <h2>Aye</h2>
+  <p>Follow <a href="https://www.instagram.com/growlypw/">@growlypw</a> &amp; <a href="https://www.instagram.com/genterpw/?hl=en">@genterpw</a> on instagram.</p>
+  <img src="img/lanky.png" alt="A picture of Lanky">
+</div>
