--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ title: Welcome to the home page
 
 <div class="animate-bottom content">
   <h2>Aye</h2>
-  <p>Follow <a href="https://www.instagram.com/growlypw/">@growlypw</a> &amp; <a href="https://www.instagram.com/genterpw/?hl=en">@genterpw</a> on instagram.</p>
-  <img src="img/lanky.png" alt="A picture of Lanky">
+  <p>Follow <a href="https://www.instagram.com/growlypw/">@growlypw</a> &amp; <a href="https://www.instagram.com/genterpw/">@genterpw</a> on instagram.</p>
+  <img src="img/lanky.png" alt="A picture of Lanky from pixel worlds">
 </div>
